--- a/index_background.html
+++ b/index_background.html
@@ -3,15 +3,16 @@
 <head>
 	<meta charset='utf-8' />
 	<title>弱視者用配色可変オンライン地図</title>
-	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
-	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.0/mapbox-gl.js'></script>
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.0/mapbox-gl.css' rel='stylesheet'/>
-	<link href="css/style.css" rel="stylesheet">
+	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
+	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
+	<link href="css/style_background.css" rel="stylesheet" />
+</head>
 <body>
 	<div id="map"></div>
 	<div id="instructions"></div>
-<script src='JavaScript/LowVisionMap.js'></script>
+
+	<script src='JavaScript/LowVisionMap_background.js'></script>
 
 </body>
 
