--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
 	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
 	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
-	<link href="css/style.css" rel="stylesheet" />
+	<link href="css/style_background.css" rel="stylesheet" />
 </head>
 <body>
 	<div id="map"></div>
-	<div id="instructions"></div>
 
-	<script src='JavaScript/LowVisionMap.js'></script>
+	<script src='JavaScript/LowVisionMap_background.js'></script>
 
 </body>
 
