--- a/index_background.html
+++ b/index_background.html
@@ -13,6 +13,14 @@
 	<link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" rel="stylesheet" type="text/css"/>
 <body>
 	<div id="map"></div>
+		<div class='map-overlay-inner'>
+			<fieldset>
+				<label>choose a text-size</label>
+					<button id="big">Big</button>
+					<button id="small">Small</button>
+			</fieldset>
+		</div>
+	</div>
 
 	<script src='JavaScript/LowVisionMap_background.js'></script>
 
