--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
 	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
 	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
-	<link href="css/style.css" rel="stylesheet" />
+	<link href="css/style_background.css" rel="stylesheet" />
 	<script src="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js"></script>
 	<link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
 	<link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" rel="stylesheet" type="text/css"/>
 <body>
 	<div id="map"></div>
+		<div class='map-overlay-inner'>
+			<fieldset>
+				<label>choose a text-size</label>
+					<button id="large">large</button>
+					<button id="small">Small</button>
+			</fieldset>
+		</div>
+	</div>
 
-	<script src='JavaScript/LowVisionMap.js'></script>
+	<script src='JavaScript/LowVisionMap_background.js'></script>
 
 </body>
 
