--- a/index_background.html
+++ b/index_background.html
@@ -16,7 +16,7 @@
 		<div class='map-overlay-inner'>
 			<fieldset>
 				<label>choose a text-size</label>
-					<button id="big">Big</button>
+					<button id="large">large</button>
 					<button id="small">Small</button>
 			</fieldset>
 		</div>
