--- a/index_background.html
+++ b/index_background.html
@@ -14,12 +14,19 @@
 <body>
 	<div id="map"></div>
 		<div class='map-overlay-inner'>
-			<fieldset>
-				<label>choose a text-size</label>
+			<fieldset id="size">
+				<label>text-size</label>
 					<button id="large">large</button>
 					<button id="small">Small</button>
 			</fieldset>
+			<fieldset  id="state">
+				<label>state label</label>
+					<button id="on">on</button>
+					<button id="off">off</button>
+			</fieldset>
+
 		</div>
+	</div>
 	</div>
 
 	<script src='JavaScript/LowVisionMap_background.js'></script>
