--- a/index_background.html
+++ b/index_background.html
@@ -14,10 +14,10 @@
 <body>
 	<div id="map"></div>
 		<div class='map-overlay-inner'>
-			<fieldset id="size">
-				<label>text-size</label>
-					<button id="large">large</button>
-					<button id="small">Small</button>
+			<fieldset  id="country">
+				<label>country label</label>
+					<button id="on">on</button>
+					<button id="off">off</button>
 			</fieldset>
 			<fieldset  id="state">
 				<label>state label</label>
