--- a/index_background.html
+++ b/index_background.html
@@ -19,11 +19,11 @@
 			<form name="Label">表示する文字の属性<br>
 				<input type="checkbox" name="PlaceLabel" value="country-label">国名<br>
 				<input type="checkbox" name="PlaceLabel" value="state-label">県名<br>
-				<input type="checkbox" name="PlaceLabel" value="airport-label">空港とか自衛隊基地の名前<br>
-				<input type="checkbox" name="PlaceLabel" value="natural-point-label">山とか温泉の名前<br>
-				<input type="checkbox" name="PlaceLabel" value="water-point-label">川とか海の名前<br>
-				<input type="checkbox" name="PlaceLabel" value="road-label-simple">太い道路の名前<br>
-				<input type="checkbox" name="PlaceLabel" value="path-pedestrian-label">細い道路とか歩道の名前<br>
+				<input type="checkbox" name="PlaceLabel" value="airport-label">空港、自衛隊基地<br>
+				<input type="checkbox" name="PlaceLabel" value="natural-point-label">山、温泉<br>
+				<input type="checkbox" name="PlaceLabel" value="water-point-label">川、海<br>
+				<input type="checkbox" name="PlaceLabel" value="road-label-simple">太い道路<br>
+				<input type="checkbox" name="PlaceLabel" value="path-pedestrian-label">細い道路、歩道<br>
 			</form>
 			</fieldset>
 			<fieldset>
