--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 					<input type="button" value="表示" onclick="show()"/>
 					<input type="button" value="非表示" onclick="hide()"/>
 			</fieldset>
+			<fieldset>
+				<label>リセットボタン</label>
+					<button id="reset">リセット</button>
+
+					<input type="button" value="リセット" onclick="reset()"/>
+			</fieldset>
 		</div>
 	</div>
 	<script src='JavaScript/LowVisionMap_background.js'></script>
