--- a/index_background.html
+++ b/index_background.html
@@ -1,115 +1,45 @@
-
-<!-- 現在地を取得 -->
-
-navigator.geolocation.getCurrentPosition(success,error); 
-
-
-
-<!-- 現在地周辺の地図読み込み -->
-
-mapboxgl.accessToken = 'pk.eyJ1IjoibmdvNTExMSIsImEiOiJjanh6Z3l6cmIwMG9tM21uNGtuNnB0NXM2In0.IwFlVev1tMBm-gy5zWiS9Q';
-var map = new mapboxgl.Map({
-	container: 'map',
-	style: 'mapbox://styles/ngo5111/ckemjqmlv2cyh19rrpe99nr7y',
-	center: [139.70 , 35.68] ,
-	zoom: 11.5
-});
-
-
-
-<!-- 取得に成功した場合の関数 -->
-
-function success(position){
-	var com = position.coords;
-	var comlng = com.longitude ;
-	var comlat = com.latitude ;
-	map.setCenter([+ comlng , + comlat]);
-
-
-	<!-- コントロールボタン、ジオコーダー追加 -->
-
-	map.addControl(
-		new mapboxgl.NavigationControl({
-		}),
-		'bottom-right'
-	);
-
-	map.addControl(
-		new MapboxGeocoder({
-			accessToken: mapboxgl.accessToken,
-			mapboxgl: mapboxgl
-		}),
-		'top-right'
-	);
-}
-
-
-<!-- 取得に失敗した場合の関数 -->
-
-function error(err){
-
-	<!-- コントロールボタン、ジオコーダー追加 -->
-
-	map.addControl(new mapboxgl.NavigationControl());
-
-	map.addControl(
-		new MapboxGeocoder({
-			accessToken: mapboxgl.accessToken,
-			mapboxgl: mapboxgl
-		}),
-		'bottom-right'
-	);
-}
-
-
-<!-- 表示ボタン押したらチェックボックス調べて大きくする -->
-			
-function show(){
-	const PlaceLabel = document.Label.PlaceLabel;
-			
-	for (let i = 0; i < PlaceLabel.length; i++){
-		if(PlaceLabel[i].checked){ 
-			const tmp = [];
-			tmp.push(PlaceLabel[i].value);
-			map.setLayoutProperty(tmp,'text-size',60);
-		}
-	}
-}
-
-
-<!-- 非表示ボタン押したらチェックボックス調べて消す -->
-
-function hide(){
-	const PlaceLabel = document.Label.PlaceLabel;
-			
-	for (let i = 0; i < PlaceLabel.length; i++){
-		if(PlaceLabel[i].checked){ 
-			const tmp = [];
-			tmp.push(PlaceLabel[i].value);
-			map.setLayoutProperty(tmp,'text-size',0);
-		}
-	}
-}
-
-
-<!-- リセットボタン押したら文字の大きさ最初の状態に戻す -->
-
-var reset = document.getElementById('reset');
-
-reset.addEventListener('click', function() {
-	map.setLayoutProperty("country-label",'text-size',100);
-	map.setLayoutProperty("state-label",'text-size',100);
-	map.setLayoutProperty("settlement-major-label",'text-size',100);
-	map.setLayoutProperty("settlement-minor-label",'text-size',100);
-	map.setLayoutProperty("airport-label",'text-size',100);
-	map.setLayoutProperty("natural-point-label",'text-size',100);
-	map.setLayoutProperty("water-point-label",'text-size',100);
-	map.setLayoutProperty("road-label-simple",'text-size',100);
-	map.setLayoutProperty("path-pedestrian-label",'text-size',100);
-},false);
-
-
-
-
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset='utf-8' />
+	<title>弱視者用配色可変オンライン地図</title>
+	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+	<link href="css/style_background.css" rel="stylesheet" />
+	<script src="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js"></script>
+	<link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />
+	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
+	<link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" rel="stylesheet" type="text/css"/>
+</head>
 	
+<body>
+	<div id="map"></div>
+	<div class="map-overlay top">
+		<div class='map-overlay-inner'>
+			<fieldset>
+			<form name="Label">表示する文字の属性<br>
+				<input type="checkbox" name="PlaceLabel" value="country-label">国名<br>
+				<input type="checkbox" name="PlaceLabel" value="state-label">県名<br>
+				<input type="checkbox" name="PlaceLabel" value="airport-label">空港、自衛隊基地<br>
+				<input type="checkbox" name="PlaceLabel" value="natural-point-label">山、温泉<br>
+				<input type="checkbox" name="PlaceLabel" value="water-point-label">川、海<br>
+				<input type="checkbox" name="PlaceLabel" value="road-label-simple">太い道路<br>
+				<input type="checkbox" name="PlaceLabel" value="path-pedestrian-label">細い道路、歩道<br>
+			</form>
+			</fieldset>
+			<fieldset>
+				<label>ラベルの 表示/非表示 切り替え</label>
+					<input type="button" value="表示" onclick="show()"/>
+					<input type="button" value="非表示" onclick="hide()"/>
+			</fieldset>
+			<fieldset>
+				<label>リセットボタン</label>
+					<button id="reset">リセット</button>
+					<input type="button" value="リセット" onclick="reset()"/>
+			</fieldset>
+		</div>
+	</div>
+	<script src='JavaScript/LowVisionMap_background.js'></script>
+
+</body>
+
+</html>
