--- a/index_background.html
+++ b/index_background.html
@@ -19,6 +19,7 @@
 			<form name="Label">表示する文字の属性<br>
 				<input type="checkbox" name="PlaceLabel" value="country-label">国名<br>
 				<input type="checkbox" name="PlaceLabel" value="state-label">県名<br>
+				<input type="checkbox" name="PlaceLabel" value="Point of interest labels">建物<br>
 				<input type="checkbox" name="PlaceLabel" value="airport-label">空港、自衛隊基地<br>
 				<input type="checkbox" name="PlaceLabel" value="natural-point-label">山、温泉<br>
 				<input type="checkbox" name="PlaceLabel" value="water-point-label">川、海<br>
