--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 					<input type="button" value="表示" onclick="show()"/>
 					<input type="button" value="非表示" onclick="hide()"/>
 			</fieldset>
+				<label>お試しのリンク</label>
+				<li><a href="index_background.html">リンク（表示する町選択）</a></li>
 		</div>
 	</div>
 	<script src='JavaScript/LowVisionMap_background.js'></script>
