--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<input type="button" value="非表示" onclick="hide()"/>
 			</fieldset>
 				<label>お試しのリンク</label>
-				<li><a href="index_background.html">リンク（表示する町選択）</a></li>
+				<li><a href="index_background.html">開発者用ページです。開かないでください。</a></li>
 		</div>
 	</div>
 	<script src='JavaScript/LowVisionMap_background.js'></script>
