edit window add

--- a/index_responsible.html
+++ b/index_responsible.html
@@ -32,7 +32,7 @@
 					<input type="button" value="表示" onclick="show()"/>
 					<input type="button" value="非表示" onclick="hide()"/>
             </fieldset>
-			<input type="button" value="設定画面" onclick="ControlPanel()"/>
+			<input type="button" value="設定画面" onclick="control()"/>
 		</div>
     </div>
     
