toggle switch add

--- a/MapEdit.html
+++ b/MapEdit.html
@@ -13,8 +13,8 @@
 </head>
 	
 <body>
-</div>
-	<fieldset>
+<div>
+	<fieldset class="EditPanel_PC">
 		<form name="Label">表示する文字の属性<br>
 			<input type="checkbox" name="PlaceLabel" value="country-label">国名<br>
 			<input type="checkbox" name="PlaceLabel" value="state-label">県名<br>
@@ -29,7 +29,7 @@
 		<label>ラベルの 表示/非表示 切り替え</label>
 			<input type="button" value="表示" onclick="show()"/>
 			<input type="button" value="非表示" onclick="hide()"/>
-        </fieldset>
+    </fieldset>
 	<input type="button" value="適用" onclick="EditGo()"/>
 </div>
     
