--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
 	<link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" rel="stylesheet" type="text/css"/>
-	<link href="css/style_responsible.css" rel="stylesheet" />
+	<link href="css/style.css" rel="stylesheet" />
 	<script type="text/javascript" src="//typesquare.com/3/tsst/script/ja/typesquare.js?602b606aff0c440ca9be6b2eac1e02e5" charset="utf-8"></script>
 </head>
 	
@@ -63,7 +63,7 @@
 
 	
 	<span id="check"></span>
-	<script src='JavaScript/LowVisionMap_responsible.js'></script>
+	<script src='JavaScript/LowVisionMap.js'></script>
 
 </body>
 
