--- a/index.html
+++ b/index.html
@@ -16,54 +16,53 @@
 <body>
 	<div id="map"></div>
 	<div class="main">
-		<div class="CheckBox">
+		<div class="EditPanel_PC">
 			<h3>設定</h3>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-1' class="checkbox" checked="checked" name="PlaceLabel" value="country-label" onclick="toggle()" />
+					<input type='checkbox' id='setting-item-1' class="checkbox" checked="checked" name="PlaceLabel" value="country-label" onclick="toggle1()" />
 					<label class="switch" for='setting-item-1'></label>
 					<label class="text" for='setting-item-1'>国名</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-2' class="checkbox" checked="checked" name="PlaceLabel" value="state-label" />
+					<input type='checkbox' id='setting-item-2' class="checkbox" checked="checked" name="PlaceLabel" value="state-label" onclick="toggle2()"/>
 					<label class="switch" for='setting-item-2'></label>
 					<label class="text" for='setting-item-2'>県名</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-3' class="checkbox" checked="checked" name="PlaceLabel" value="airport-label" />
+					<input type='checkbox' id='setting-item-3' class="checkbox" checked="checked" name="PlaceLabel" value="airport-label" onclick="toggle3()"/>
 					<label class="switch" for='setting-item-3'></label>
 					<label class="text" for='setting-item-3'>空港、自衛隊基地</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-4' class="checkbox" checked="checked" name="PlaceLabel" value="natural-point-label" />
+					<input type='checkbox' id='setting-item-4' class="checkbox" checked="checked" name="PlaceLabel" value="natural-point-label" onclick="toggle4()"/>
 					<label class="switch" for='setting-item-4'></label>
 					<label class="text" for='setting-item-4'>山、温泉</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-5' class="checkbox" checked="checked" name="PlaceLabel" value="water-point-label" />
+					<input type='checkbox' id='setting-item-5' class="checkbox" checked="checked" name="PlaceLabel" value="water-point-label" onclick="toggle5()"/>
 					<label class="switch" for='setting-item-5'></label>
 					<label class="text" for='setting-item-5'>川、海</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-6' class="checkbox" checked="checked" name="PlaceLabel" value="road-label-simple" />
+					<input type='checkbox' id='setting-item-6' class="checkbox" checked="checked" name="PlaceLabel" value="road-label-simple" onclick="toggle6()"/>
 					<label class="switch" for='setting-item-6'></label>
 					<label class="text" for='setting-item-6'>太い道路</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-7' class="checkbox" checked="checked" />
+					<input type='checkbox' id='setting-item-7' class="checkbox" checked="checked" name="PlaceLabel" value="road-pedestrian-label" onclick="toggle7()"/>
 					<label class="switch" for='setting-item-7'></label>
 					<label class="text" for='setting-item-7'>細い道路、歩道</label>
 				</div>
 		</div>
 	</div>
+	
+	<input type="range" id="Label-Size-Slider" min="0" max="30" step="0.1">
+	<p>現在の値は<span id="current-value"></span>です</p>
+
 
 	<input type="button" value="設定画面" onclick="control()"/>
-	<h1>あああああああああ</h1>
 
 
-
-
-	
-	<span id="check"></span>
 	<script src='JavaScript/LowVisionMap.js'></script>
 
 </body>
