--- a/index_responsible.html
+++ b/index_responsible.html
@@ -16,9 +16,8 @@
 	
 <body>
 	<div id="map"></div>
-	<div class="main">
+	<div class="clearfix">
 		<div class="EditPanel1_PC">
-			<h1>aaa	あああ111</h1>
 			<h3>文字の表示/非表示</h3>
 				<div class="item-frame">
 					<input type='checkbox' id='setting-item-1' class="checkbox" checked="checked" name="PlaceLabel" value="country-label" onchange="toggle()"/>
@@ -75,18 +74,15 @@
 					<label class="switch" for='setting-item-11'></label>
 					<label class="text" for='setting-item-11'>細い道路、歩道</label>
 				</div>
-
-		</div>
-
-		<div class="EditPanel2_PC">
-			<h3>文字サイズ変更</h3>
-				<input type="range" id="Label-Size-Slider" min="0" max="50" step="0.1" value="10">
-				<span id="value">10</span>
 		</div>
 	</div>
+	<div class="EditPanel2_PC">
+		<h3>文字サイズ変更</h3>
+			<input type="range" id="Label-Size-Slider" min="0" max="50" step="0.1" value="10">
+			<span id="value">10</span>
+	</div>
 	
-
-	<input type="button" value="設定画面" onclick="control()"/>
+	<input type="button" id="ControlPanelOpen" value="設定画面" onclick="control()"/>
 
 
 	<script src='JavaScript/LowVisionMap_responsible.js'></script>
